# NeuralNetCpp

./: .gitignore  CMakeLists.txt
include/: activation_functions.hpp  hyper_params.hpp  initializers.hpp  loss_functions.hpp  mnist_loader.hpp  network.hpp  params.hpp  types.hpp
src/: activation_functions.cpp  hyper_params.cpp  initializers.cpp  loss_functions.cpp  main.cpp  mnist_loader.cpp  network.cpp
